name:                jsrepl
version:             0.1.0.0
synopsis:            A simple GHCJS-based REPL demo
description:         A demonstration of the monadic pretty printer
homepage:            none
license:             MIT
license-file:        LICENSE
author:              David Christiansen
maintainer:          david@davidchristiansen.dk
copyright:           2017 David Christiansen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
  default-language:    Haskell2010

executable jsrepl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  other-modules:       Lisp
  build-depends:       base
                     , ghcjs-base
                     , jsrepl
                     , mtl
                     , ghcjs-dom == 0.7.0.4
                     , pretty-monadic-printer
                     , text
                     , transformers
                     , containers
  default-language:    Haskell2010

-- source-repository head
--   type:     git
-- location: https://github.com/githubuser/frontend
