name:                jsrepl
version:             0.1.0.0
synopsis:            A simple GHCJS-based REPL demo
description:         A demonstration of the Final Pretty Printer
homepage:            none
license:             MIT
license-file:        LICENSE
author:              David Christiansen
maintainer:          david@davidchristiansen.dk
copyright:           2017 David Christiansen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib, PPHaskell
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-dom == 0.7.0.4
                     , ghcjs-base
                     , haskell-src-exts == 1.17.1
                     , final-pretty-printer >= 0.1
                     , text
                     , mtl
                     , transformers
                     , containers
  default-language:    Haskell2010

executable jsrepl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  other-modules:       Lisp
  build-depends:       base
                     , ghcjs-base
                     , jsrepl
                     , mtl
                     , ghcjs-dom == 0.7.0.4
                     , final-pretty-printer >= 0.1
                     , text
                     , transformers
                     , containers
  default-language:    Haskell2010

executable ppupload
  hs-source-dirs:      app
  main-is:             Upload.hs
  ghc-options:         -Wall
  other-modules:       Lisp
  build-depends:       base
                     , ghcjs-base
                     , haskell-src-exts == 1.17.1
                     , jsrepl
                     , mtl
                     , ghcjs-dom == 0.7.0.4
                     , final-pretty-printer >= 0.1
                     , text
                     , transformers
                     , containers
  default-language:    Haskell2010

executable pploop
  hs-source-dirs:      app
  main-is:             HsRpl.hs
  ghc-options:         -Wall
  other-modules:       Lisp
  build-depends:       base
                     , ghcjs-base
                     , haskell-src-exts == 1.17.1
                     , jsrepl
                     , mtl
                     , ghcjs-dom == 0.7.0.4
                     , final-pretty-printer >= 0.1
                     , text
                     , transformers
                     , containers
  default-language:    Haskell2010

executable laws
  hs-source-dirs:      app
  main-is:             Laws.hs
  ghc-options:         -Wall
  other-modules:       Lisp
  build-depends:       base
                     , ghcjs-base
                     , haskell-src-exts == 1.17.1
                     , jsrepl
                     , mtl
                     , ghcjs-dom == 0.7.0.4
                     , final-pretty-printer >= 0.1
                     , text
                     , transformers
                     , containers
  default-language:    Haskell2010


-- source-repository head
--   type:     git
-- location: https://github.com/githubuser/frontend
